新建抢险，修改流转，建议等6个界面

--- a/flow.html
+++ b/flow.html
@@ -119,84 +119,83 @@
                  </div>
 
                  <!--开始--------------流转自己的-->
-                 <div class="z_flow_gldj">
+                 <!--<div class="z_flow_gldj">-->
 
                      <!--关联单据类型-->
-                     <div class="z_gldj_list layui-form">
-                         <span style="font-size: 16px">关联单据:</span>
-                         <div class="layui-form-item"> 
-                             <div class="layui-input-inline"> 
-                                 <select name="quiz1"> 
-                                     <option value="1">E成E家订单</option> 
-                                     <option value="2">SAP单据</option> 
-                                     <option value="3">商城订单</option> 
-                                     <option value="4" selected>话务类单据</option> 
-                                 </select> 
-                             </div> 
-                         </div>
+                     <!--<div class="z_gldj_list layui-form">-->
+                         <!--<span style="font-size: 16px">关联单据:</span>-->
+                         <!--<div class="layui-form-item"> -->
+                             <!--<div class="layui-input-inline"> -->
+                                 <!--<select name="quiz1"> -->
+                                     <!--<option value="1">E成E家订单</option> -->
+                                     <!--<option value="2">SAP单据</option> -->
+                                     <!--<option value="3">商城订单</option> -->
+                                     <!--<option value="4" selected>话务类单据</option> -->
+                                 <!--</select> -->
+                             <!--</div> -->
+                         <!--</div>-->
 
-                         <input type="text" class="z_flow_input">
+                         <!--<input type="text" class="z_flow_input">-->
 
-                     </div>
+                     <!--</div>-->
 
 
                      <!--关联单据详情-->
-                     <div class="z_gldj_detail">
+                     <!--<div class="z_gldj_detail">-->
 
-                         <div>
-                             <span>建议单编号:</span>
-                             <span class="gayColor">&nbsp;&nbsp;2892791879871297</span>
-                             <span style="margin-left: 30px">分类:</span>
-                             <span class="gayColor">&nbsp;&nbsp;燃气-灶具</span>
-                             <span style="margin-left: 30px">状态:</span>
-                             <span class="gayColor">&nbsp;&nbsp;完成</span>
-                             <span style="margin-left: 30px">催单次数:</span>
-                             <span class="gayColor">&nbsp;&nbsp;1</span>
-                         </div>
+                         <!--<div>-->
+                             <!--<span>建议单编号:</span>-->
+                             <!--<span class="gayColor">&nbsp;&nbsp;2892791879871297</span>-->
+                             <!--<span style="margin-left: 30px">分类:</span>-->
+                             <!--<span class="gayColor">&nbsp;&nbsp;燃气-灶具</span>-->
+                             <!--<span style="margin-left: 30px">状态:</span>-->
+                             <!--<span class="gayColor">&nbsp;&nbsp;完成</span>-->
+                             <!--<span style="margin-left: 30px">催单次数:</span>-->
+                             <!--<span class="gayColor">&nbsp;&nbsp;1</span>-->
+                         <!--</div>-->
 
-                         <div style="margin-top: 15px">
-                             <span>创建人:</span>
-                             <span class="gayColor">&nbsp;&nbsp;廊坊呼叫中心-徐郑辉</span>
-                             <span style="margin-left: 30px">创建时间:</span>
-                             <span class="gayColor">&nbsp;&nbsp;2017-2-22 12:22</span>
-                         </div>
-                         <div style="margin-top: 15px">
-                             <span style="margin-right: 15px">孙悟空</span>
-                             <span style="margin-right: 15px">男士</span>
-                             <span style="margin-right: 15px">1555555555555</span>
-                             <span style="margin-right: 15px">河北省廊坊市甘井子原件元</span>
-                             <span style="margin-right: 15px">喜悦小区12栋2单元201</span>
-                         </div>
+                         <!--<div style="margin-top: 15px">-->
+                             <!--<span>创建人:</span>-->
+                             <!--<span class="gayColor">&nbsp;&nbsp;廊坊呼叫中心-徐郑辉</span>-->
+                             <!--<span style="margin-left: 30px">创建时间:</span>-->
+                             <!--<span class="gayColor">&nbsp;&nbsp;2017-2-22 12:22</span>-->
+                         <!--</div>-->
+                         <!--<div style="margin-top: 15px">-->
+                             <!--<span style="margin-right: 15px">孙悟空</span>-->
+                             <!--<span style="margin-right: 15px">男士</span>-->
+                             <!--<span style="margin-right: 15px">1555555555555</span>-->
+                             <!--<span style="margin-right: 15px">河北省廊坊市甘井子原件元</span>-->
+                             <!--<span style="margin-right: 15px">喜悦小区12栋2单元201</span>-->
+                         <!--</div>-->
 
-                         <div style="margin-top: 15px">
-                             <span>问题描素:</span>
-                             <span class="gayColor" style="line-height: 18px">&nbsp;&nbsp;建议不要半夜工作,都睡觉了</span>
-                         </div>
-                     </div>
+                         <!--<div style="margin-top: 15px">-->
+                             <!--<span>问题描素:</span>-->
+                             <!--<span class="gayColor" style="line-height: 18px">&nbsp;&nbsp;建议不要半夜工作,都睡觉了</span>-->
+                         <!--</div>-->
+                     <!--</div>-->
 
-                 </div>
+                 <!--</div>-->
 
                  <!--流转什么,后边都一样的-->
                  <div id="z_ljbft_bottom">
 
-                     <div class="z_gldj_list layui-form hidden">
-                         <span style="font-size: 16px">关联单据:</span>
-                         <div class="layui-form-item"> 
-                             <div class="layui-input-inline"> 
-                                 <select name="quiz1"> 
-                                     <option value="1">E成E家订单</option> 
-                                     <option value="2">SAP单据</option> 
-                                     <option value="3">商城订单</option> 
-                                     <option value="4" selected>话务类单据</option> 
-                                 </select> 
-                             </div> 
-                         </div>
+                     <!--<div class="z_gldj_list layui-form hidden">-->
+                         <!--<span style="font-size: 16px">关联单据:</span>-->
+                         <!--<div class="layui-form-item"> -->
+                             <!--<div class="layui-input-inline"> -->
+                                 <!--<select name="quiz1"> -->
+                                     <!--<option value="1">E成E家订单</option> -->
+                                     <!--<option value="2">SAP单据</option> -->
+                                     <!--<option value="3">商城订单</option> -->
+                                     <!--<option value="4" selected>话务类单据</option> -->
+                                 <!--</select> -->
+                             <!--</div> -->
+                         <!--</div>-->
 
-                         <input type="text" class="z_flow_input">
+                         <!--<input type="text" class="z_flow_input">-->
 
-                     </div>
+                     <!--</div>-->
                      <p>流转单</p>
-
 
                      <!--分类-->
                      <div class="marginT15 z_classify">
@@ -204,14 +203,14 @@
                          <div class="pull-left layui-form">
                              <div class="layui-form-item"> 
                                  <div class="layui-input-inline input-inline1"> 
-                                     <div style="width:200px;" class="layui-form-item">
-
-                                	 	<input style="width: 120px; float: left; display: inline-block;" readonly="readonly" type="text" name="username" lay-verify="required" placeholder="请选择城市" autocomplete="off" class="layui-input" />
-                                	 	<button onclick="choiceCityRadio()" class="z_dia_e_span_btn2">选择</button>
-                   				 	
-                                	 </div>
+                                     <select name="quiz1"> 
+                                         <option value="1">E成E家订单</option> 
+                                         <option value="2">SAP单据</option> 
+                                         <option value="3">商城订单</option> 
+                                         <option value="4" selected>话务类单据</option> 
+                                     </select> 
                                  </div> 
-                                 <div style="width: 60%;margin-left: 40px; float: left;" class="layui-input-inline input-inline2"> 
+                                 <div class="layui-input-inline input-inline2"> 
                                      <select name="quiz1"> 
                                          <option value="1">E成E家订单</option> 
                                          <option value="2">SAP单据</option> 
@@ -238,14 +237,17 @@
                                  <div class="pull-left layui-form">
                                      <div class="layui-form-item"> 
                                          <div class="layui-input-inline input-inline1"> 
-                                             <select name="quiz1"> 
-                                                 <option value="1">E成E家订单</option> 
-                                                 <option value="2">SAP单据</option> 
-                                                 <option value="3">商城订单</option> 
-                                                 <option value="4" selected>话务类单据</option> 
-                                             </select> 
+                                             <!--<input style="display: inline-block;" type="text" name="title" lay-verify="title" autocomplete="off" placeholder="请选择城市" class="layui-input">-->
+
+                                             <div style="width:200px;" class="layui-form-item">
+
+                                                 <input style="width: 120px; float: left; display: inline-block;" readonly="readonly" type="text" name="username" lay-verify="required" placeholder="请选择城市" autocomplete="off" class="layui-input" />
+                                                 <button onclick="choiceCityRadio()" class="z_dia_e_span_btn2">选择</button>
+
+                                             </div>
+
                                          </div> 
-                                         <div class="layui-input-inline input-inline2"> 
+                                         <div style="width: 60%; float: left; margin-left: 40px;" class="layui-input-inline input-inline2"> 
                                              <select name="quiz1"> 
                                                  <option value="1">E成E家订单</option> 
                                                  <option value="2">SAP单据</option> 
@@ -435,12 +437,12 @@
      </div>
      
      <!--用于回复通知-->
-<div class="modal fade" id="userNotice" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+<div class="modal fade" id="userNotice" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabelH">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="exampleModalLabel">用户回复设置</h4>
+        <h4 class="modal-title" id="exampleModalLabelH">用户回复设置</h4>
       </div>
       <div style="height: 300px;" class="modal-body">
        		<div class="z_modl_dial">
@@ -474,12 +476,12 @@
 
 
 <!--用于关联单据-->
-<div class="modal fade" id="setGuanLian" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+<div class="modal fade" id="setGuanLian" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabelG">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="exampleModalLabel">设置供参考的关联单据</h4>
+        <h4 class="modal-title" id="exampleModalLabelG">设置供参考的关联单据</h4>
       </div>
       <div  class="modal-body">
        		<div style="width: 100%;">
