--- a/myBuildBill.html
+++ b/myBuildBill.html
@@ -5,6 +5,8 @@
     <title>我建的单据</title>
     <!--导入css-->
     <link rel="stylesheet" type="text/css" href="css/z_pageCommon.css" />
+
+
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="layui/css/layui.css" media="all"/>
     <!--<link rel="stylesheet" type="text/css" href="css/z_receiptsDetail.css" />-->
@@ -72,7 +74,7 @@
                     </thead>
                     <tbody>
                     <tr>
-                        <td>228282828</td>
+                        <td style="position: relative"><span>1789279127</span><div class="z_tabUngentPic">急</div></td>
                         <td>流转单</td>
                         <td>徐正辉</td>
                         <td>廊坊燃气公司</td>
@@ -83,7 +85,7 @@
                         <td style="color: rgb(105,121,215);cursor: pointer"><span>审核</span><span class="marginL5" data-toggle="modal" data-target="#updateDesc">修改描述</span><span class="marginL5" data-toggle="modal" data-target="#deleteBill">取消</span></td>
                     </tr>
                     <tr>
-                        <td>228282828</td>
+                        <td style="position: relative"><span>1789279127</span><div class="z_tabUngentPic">急</div></td>
                         <td>流转单</td>
                         <td>徐正辉</td>
                         <td>廊坊燃气公司</td>
@@ -94,7 +96,7 @@
                         <td style="color: rgb(105,121,215);cursor: pointer"><span>审核</span><span class="marginL5" data-toggle="modal" data-target="#updateDesc">修改描述</span><span class="marginL5" data-toggle="modal" data-target="#deleteBill">取消</span></td>
                     </tr>
                     <tr>
-                        <td>228282828</td>
+                        <td style="position: relative"><span>1789279127</span><div class="z_tabUngentPic">急</div></td>
                         <td>流转单</td>
                         <td>徐正辉</td>
                         <td>廊坊燃气公司</td>
@@ -105,7 +107,7 @@
                         <td style="color: rgb(105,121,215);cursor: pointer"><span>审核</span><span class="marginL5" data-toggle="modal" data-target="#updateDesc">修改描述</span><span class="marginL5" data-toggle="modal" data-target="#deleteBill">取消</span></td>
                     </tr>
                     <tr>
-                        <td>228282828</td>
+                        <td style="position: relative"><span>1789279127</span><div class="z_tabUngentPic">急</div></td>
                         <td>流转单</td>
                         <td>徐正辉</td>
                         <td>廊坊燃气公司</td>
