--- a/complaint.html
+++ b/complaint.html
@@ -120,22 +120,22 @@
             <!--流转什么,后边都一样的-->
             <div id="z_ljbft_bottom">
 
-                <div class="z_gldj_list layui-form">
-                    <div class="z_leftDiv" style="font-size: 16px">关联单据:</div>
-                    <div class="layui-form-item"> 
-                        <div class="layui-input-inline"> 
-                            <select name="quiz1"> 
-                                <option value="1">E成E家订单</option> 
-                                <option value="2">SAP单据</option> 
-                                <option value="3">商城订单</option> 
-                                <option value="4" selected>话务类单据</option> 
-                            </select> 
-                        </div> 
-                    </div>
+                <!--<div class="z_gldj_list layui-form">-->
+                    <!--<div class="z_leftDiv" style="font-size: 16px">关联单据:</div>-->
+                    <!--<div class="layui-form-item"> -->
+                        <!--<div class="layui-input-inline"> -->
+                            <!--<select name="quiz1"> -->
+                                <!--<option value="1">E成E家订单</option> -->
+                                <!--<option value="2">SAP单据</option> -->
+                                <!--<option value="3">商城订单</option> -->
+                                <!--<option value="4" selected>话务类单据</option> -->
+                            <!--</select> -->
+                        <!--</div> -->
+                    <!--</div>-->
 
-                    <input type="text" class="z_page_input">
+                    <!--<input type="text" class="z_page_input">-->
 
-                </div>
+                <!--</div>-->
                 <p>投诉单</p>
 
 
@@ -378,12 +378,12 @@
 
 </div>
 <!--用于回复通知-->
-<div class="modal fade" id="userNotice" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+<div class="modal fade" id="userNotice" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabelH">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="exampleModalLabel">用户回复设置</h4>
+        <h4 class="modal-title" id="exampleModalLabelH">用户回复设置</h4>
       </div>
       <div style="height: 300px;" class="modal-body">
        		<div class="z_modl_dial">
@@ -417,12 +417,12 @@
 
 
 <!--用于关联单据-->
-<div class="modal fade" id="setGuanLian" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+<div class="modal fade" id="setGuanLian" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabelG">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="exampleModalLabel">设置供参考的关联单据</h4>
+        <h4 class="modal-title" id="exampleModalLabelG">设置供参考的关联单据</h4>
       </div>
       <div  class="modal-body">
        		<div style="width: 100%;">
