--- a/feedback.html
+++ b/feedback.html
@@ -120,24 +120,23 @@
             <!--流转什么,后边都一样的-->
             <div id="z_ljbft_bottom">
 
-                <div class="z_gldj_list layui-form">
-                    <div class="z_leftDiv" style="font-size: 16px">关联单据:</div>
-                    <div class="layui-form-item"> 
-                        <div class="layui-input-inline"> 
-                            <select name="quiz1"> 
-                                <option value="1">E成E家订单</option> 
-                                <option value="2">SAP单据</option> 
-                                <option value="3">商城订单</option> 
-                                <option value="4" selected>话务类单据</option> 
-                            </select> 
-                        </div> 
-                    </div>
+                <!--<div class="z_gldj_list layui-form">-->
+                    <!--<div class="z_leftDiv" style="font-size: 16px">关联单据:</div>-->
+                    <!--<div class="layui-form-item"> -->
+                        <!--<div class="layui-input-inline"> -->
+                            <!--<select name="quiz1"> -->
+                                <!--<option value="1">E成E家订单</option> -->
+                                <!--<option value="2">SAP单据</option> -->
+                                <!--<option value="3">商城订单</option> -->
+                                <!--<option value="4" selected>话务类单据</option> -->
+                            <!--</select> -->
+                        <!--</div> -->
+                    <!--</div>-->
 
-                    <input type="text" class="z_page_input">
+                    <!--<input type="text" class="z_page_input">-->
 
-                </div>
+                <!--</div>-->
                 <p>反馈单</p>
-
 
                 <!--分类-->
                 <div class="marginT15 z_classify">
@@ -145,14 +144,14 @@
                     <div class="pull-left layui-form">
                         <div class="layui-form-item"> 
                             <div class="layui-input-inline input-inline1"> 
-                                <div style="width:200px;" class="layui-form-item">
-
-	                        	 	<input style="width: 120px; float: left; display: inline-block;" readonly="readonly" type="text" name="username" lay-verify="required" placeholder="请选择城市" autocomplete="off" class="layui-input" />
-	                        	 	<button onclick="choiceCityRadio()" class="z_dia_e_span_btn2">选择</button>
-	           				 	
-	                        	 </div>
+                                <select name="quiz1"> 
+                                    <option value="1">E成E家订单</option> 
+                                    <option value="2">SAP单据</option> 
+                                    <option value="3">商城订单</option> 
+                                    <option value="4" selected>话务类单据</option> 
+                                </select> 
                             </div> 
-                            <div style="width:60%; float: left; margin-left: 40px;" class="layui-input-inline input-inline2"> 
+                            <div class="layui-input-inline input-inline2"> 
                                 <select name="quiz1"> 
                                     <option value="1">E成E家订单</option> 
                                     <option value="2">SAP单据</option> 
@@ -179,14 +178,17 @@
                             <div class="pull-left layui-form">
                                 <div class="layui-form-item"> 
                                     <div class="layui-input-inline input-inline1"> 
-                                        <select name="quiz1"> 
-                                            <option value="1">E成E家订单</option> 
-                                            <option value="2">SAP单据</option> 
-                                            <option value="3">商城订单</option> 
-                                            <option value="4" selected>话务类单据</option> 
-                                        </select> 
+                                        <!--<input style="display: inline-block;" type="text" name="title" lay-verify="title" autocomplete="off" placeholder="请选择城市" class="layui-input">-->
+
+                                        <div style="width:200px;" class="layui-form-item">
+
+                                            <input style="width: 120px; float: left; display: inline-block;" readonly="readonly" type="text" name="username" lay-verify="required" placeholder="请选择城市" autocomplete="off" class="layui-input" />
+                                            <button onclick="choiceCityRadio()" class="z_dia_e_span_btn2">选择</button>
+
+                                        </div>
+
                                     </div> 
-                                    <div class="layui-input-inline input-inline2"> 
+                                    <div style="width: 60%; float: left; margin-left: 40px;" class="layui-input-inline input-inline2"> 
                                         <select name="quiz1"> 
                                             <option value="1">E成E家订单</option> 
                                             <option value="2">SAP单据</option> 
@@ -207,16 +209,16 @@
                 </div>
 
                 <!--有无参考的关联单据-->
-				<div style="position: relative;  margin-left: 93px;" class="z_two_fang">
+				<div style="position: relative;  margin-left: 93px;margin-top: 15px" class="z_two_fang">
 				  	<span onclick="setGuanLian()" class="z_two_fang_span"></span>
 				  	<span class="z_two_fang_span2">有供参考的关联单据（ 上门服务订单 <span style="color: #59caf4;">DD6876786878778</span>）</span>
                 	<img   class="z_two_fang_imgGuanLian_e" src="img/duihao.png" /> 
                 </div>
                 <!--加急-->
-                <div style="margin-left: 93px;margin-top:32px; position: relative;" class="marginT15 clearfix z_ungent ">
-                	<span onclick="jinJi()" class="z_two_fang_span"></span>
-                    <div style="margin-top:-3px;" class="z_leftDiv pull-left">加急处理</div>
-                    <img  class="z_two_fang_imgjinji_e" src="img/duihao.png" />
+                <div style="margin-left: 93px;margin-top:12px; position: relative;" class="marginT15 clearfix z_ungent ">
+                	<!--<span onclick="jinJi()" class="z_two_fang_span"></span>-->
+                    <!--<div style="margin-top:-3px;" class="z_leftDiv pull-left">加急处理</div>-->
+                    <!--<img  class="z_two_fang_imgjinji_e" src="img/duihao.png" />-->
                 </div>
 
                 <!--回复-->
@@ -375,12 +377,12 @@
     </div>
 </div>
 <!--用于回复通知-->
-<div class="modal fade" id="userNotice" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+<div class="modal fade" id="userNotice" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabelH">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="exampleModalLabel">用户回复设置</h4>
+        <h4 class="modal-title" id="exampleModalLabelH">用户回复设置</h4>
       </div>
       <div style="height: 300px;" class="modal-body">
        		<div class="z_modl_dial">
@@ -414,12 +416,12 @@
 
 
 <!--用于关联单据-->
-<div class="modal fade" id="setGuanLian" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+<div class="modal fade" id="setGuanLian" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabelG">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="exampleModalLabel">设置供参考的关联单据</h4>
+        <h4 class="modal-title" id="exampleModalLabelG">设置供参考的关联单据</h4>
       </div>
       <div  class="modal-body">
        		<div style="width: 100%;">
