--- a/suggess.html
+++ b/suggess.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>意见</title>
+    <title>建议</title>
 
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/layui.css" media="all"/>
@@ -120,22 +120,22 @@
             <!--流转什么,后边都一样的-->
             <div id="z_ljbft_bottom">
 
-                <div class="z_gldj_list layui-form">
-                    <div class="z_leftDiv" style="font-size: 16px">关联单据:</div>
-                    <div class="layui-form-item"> 
-                        <div class="layui-input-inline"> 
-                            <select name="quiz1"> 
-                                <option value="1">E成E家订单</option> 
-                                <option value="2">SAP单据</option> 
-                                <option value="3">商城订单</option> 
-                                <option value="4" selected>话务类单据</option> 
-                            </select> 
-                        </div> 
-                    </div>
+                <!--<div class="z_gldj_list layui-form">-->
+                    <!--<div class="z_leftDiv" style="font-size: 16px">关联单据:</div>-->
+                    <!--<div class="layui-form-item"> -->
+                        <!--<div class="layui-input-inline"> -->
+                            <!--<select name="quiz1"> -->
+                                <!--<option value="1">E成E家订单</option> -->
+                                <!--<option value="2">SAP单据</option> -->
+                                <!--<option value="3">商城订单</option> -->
+                                <!--<option value="4" selected>话务类单据</option> -->
+                            <!--</select> -->
+                        <!--</div> -->
+                    <!--</div>-->
 
-                    <input type="text" class="z_page_input">
+                    <!--<input type="text" class="z_page_input">-->
 
-                </div>
+                <!--</div>-->
                 <p>建议单</p>
 
 
@@ -215,10 +215,10 @@
                 	<img   class="z_two_fang_imgGuanLian_e" src="img/duihao.png" /> 
                 </div>
                 <!--加急-->
-                <div style="margin-left: 93px;margin-top:42px; position: relative;" class="marginT15 clearfix z_ungent ">
-                	<span onclick="jinJi()" class="z_two_fang_span"></span>
-                    <div style="margin-top:-3px;" class="z_leftDiv pull-left">加急处理</div>
-                    <img  class="z_two_fang_imgjinji_e" src="img/duihao.png" />
+                <div style="margin-left: 93px;margin-top:12px; position: relative;" class="marginT15 clearfix z_ungent ">
+                	<!--<span onclick="jinJi()" class="z_two_fang_span"></span>-->
+                    <!--<div style="margin-top:-3px;" class="z_leftDiv pull-left">加急处理</div>-->
+                    <!--<img  class="z_two_fang_imgjinji_e" src="img/duihao.png" />-->
                 </div>
 
                 <!--回复-->
@@ -380,12 +380,12 @@
 
 </div>
 <!--用于回复通知-->
-<div class="modal fade" id="userNotice" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+<div class="modal fade" id="userNotice" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabelH">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="exampleModalLabel">用户回复设置</h4>
+        <h4 class="modal-title" id="exampleModalLabelH">用户回复设置</h4>
       </div>
       <div style="height: 300px;" class="modal-body">
        		<div class="z_modl_dial">
@@ -419,12 +419,12 @@
 
 
 <!--用于关联单据-->
-<div class="modal fade" id="setGuanLian" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+<div class="modal fade" id="setGuanLian" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabelG">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="exampleModalLabel">设置供参考的关联单据</h4>
+        <h4 class="modal-title" id="exampleModalLabelG">设置供参考的关联单据</h4>
       </div>
       <div  class="modal-body">
        		<div style="width: 100%;">
