流转的layui修改

--- a/receiptsDetail.html
+++ b/receiptsDetail.html
@@ -35,6 +35,25 @@
                     <button>表扬</button>
                     <button>反馈</button>
                     <button>投诉</button>
+                    <button class="pull-right">催单</button>
+                    <button class="pull-right">取消</button>
+                    <button class="pull-right">修改描述</button>
+                </div>
+
+            </div>
+
+            <div class="z_rd_box_bottom">
+                <div class="z_rd_bottom_title">处理记录</div>
+
+                <div class="z_rd_bottom_callBack clearfix">
+
+                    <div class="z_rd_bottom_left pull-left">2012-11-11 12:11:11</div>
+
+                    <div class="z_rd_bottom_right pull-left marginL30">
+                        <div><span>已完成</span><span class="marginL30">操作人:</span><span class="marginL5 gayColor">铁壁阿童木</span><span class="marginL30">接收方:</span><span class="marginL5 gayColor">廊坊呼叫中心</span></div>
+                        <div class="marginT10"><span>处理方法:</span><span class="marginL5 gayColor">以重新下订单</span></div>
+                    </div>
+
                 </div>
 
             </div>
