--- a/suggess.html
+++ b/suggess.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>建议</title>
+    <title>意见</title>
 
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/layui.css" media="all"/>
@@ -120,22 +120,6 @@
             <!--流转什么,后边都一样的-->
             <div id="z_ljbft_bottom">
 
-                <!--<div class="z_gldj_list layui-form">-->
-                    <!--<div class="z_leftDiv" style="font-size: 16px">关联单据:</div>-->
-                    <!--<div class="layui-form-item"> -->
-                        <!--<div class="layui-input-inline"> -->
-                            <!--<select name="quiz1"> -->
-                                <!--<option value="1">E成E家订单</option> -->
-                                <!--<option value="2">SAP单据</option> -->
-                                <!--<option value="3">商城订单</option> -->
-                                <!--<option value="4" selected>话务类单据</option> -->
-                            <!--</select> -->
-                        <!--</div> -->
-                    <!--</div>-->
-
-                    <!--<input type="text" class="z_page_input">-->
-
-                <!--</div>-->
                 <p>建议单</p>
 
 
