--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 		<script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
 		<script src="layui/layui.js" type="text/javascript"></script>
-		<script src="js/dialog.js"></script>
+
 		
 		<style>
 			.admin-nav-card .layui-tab-item iframe { width: 100%; border: 0; height: 100%; }
@@ -92,10 +92,10 @@
 				</ul>
 				<div  class="layui-tab-content" >
 				    <div   class="layui-tab-item layui-show ">
-				    	<iframe style="width: 100%; border:none; " id="index_main" onload="iFrameHeight()"    src="index_Main.html"></iframe>
+				    	<iframe style="width: 100%; border:none; " id="index_main"    src="index_Main.html"></iframe>
 				    </div>
 				    <div class="layui-tab-item">
-				    	<iframe style="width: 100%; border:none; height: 1300px;  "  id="index_callCenter"  src="index_callCentre.html"></iframe>
+				    	<iframe style="width: 100%; border:none;"  id="index_callCenter"  src="index_callCentre.html"></iframe>
 				    </div>
 				</div>
 			</div>
