--- a/index_Main.html
+++ b/index_Main.html
@@ -113,7 +113,7 @@
 		$(document).ready(function(){
 			centerStyle(); //用于图标对齐的函数
 			tab = function(){
-				window.parent.addTab('重要通知','imporNotice.html','123');
+				parent.addTab('重要通知','imporNotice.html','123');
 			};
 		});
 		//当浏览器窗体大小改变
