流转，抢险layui修改完成 工作台客户id修改完成

--- a/index_callCentre.html
+++ b/index_callCentre.html
@@ -246,38 +246,131 @@
                      <div class="z_peopleDTask">
 
                          <div class="z_btns">
-                             <button class="greenBColor pull-left">话务历史</button>
+                             <button class="greenBColor pull-left hwlsBtn">话务历史</button>
                              <!--<button class="prupleBColor pull-right">按地址</button>-->
-                             <button class="prupleBColor pull-right">按客户ID</button>
+                             <button class="prupleBColor pull-right khidBtn">按客户ID</button>
                              <!--<button class="prupleBColor pull-right">按电话</button>-->
                          </div>
 
-                         <div class="z_peopleIntro">
+                         <!--话务历史-->
+                         <div class="hwlsDiv">
+                             <div class="z_peopleIntro">
 
-                             <span class="pull-left">ID号:</span>
-                             <span class="pull-left gayColor">&nbsp;&nbsp;20802898028080802</span>
-                             <span class="pull-left" style="margin-left: 10px">创建时间:</span>
-                             <span class="pull-left gayColor">&nbsp;&nbsp;2018-2-22 12:22</span>
+                                 <span class="pull-left">ID号:</span>
+                                 <span class="pull-left gayColor">&nbsp;&nbsp;20802898028080802</span>
+                                 <span class="pull-left" style="margin-left: 10px">创建时间:</span>
+                                 <span class="pull-left gayColor">&nbsp;&nbsp;2018-2-22 12:22</span>
 
 
-                             <button class="pull-left" style="background-image: url('img/z_hwls1.png')">表扬99</button>
-                             <button class="pull-left" style="background-image: url('img/z_huls2.png')">订单9</button>
-                             <button class="pull-left" style="background-image: url('img/z_hwls3.png')">咨询1</button>
-                             <button class="pull-left" style="background-image: url('img/z_hwls4.png')">抢险1</button>
-                             <button class="pull-left" style="background-image: url('img/z_hwls5.png')">流转9</button>
-                             <button class="pull-left" style="background-image: url('img/z_hwls6.png')">建议9</button>
-                             <button class="pull-left" style="background-image: url('img/z_hwls7.png')">反馈1</button>
-                             <button class="pull-left" style="background-image: url('img/z_hwls8.png')">投诉1</button>
+                                 <button class="pull-left" style="background-image: url('img/z_hwls1.png')">表扬99</button>
+                                 <button class="pull-left" style="background-image: url('img/z_huls2.png')">订单9</button>
+                                 <button class="pull-left" style="background-image: url('img/z_hwls3.png')">咨询1</button>
+                                 <button class="pull-left" style="background-image: url('img/z_hwls4.png')">抢险1</button>
+                                 <button class="pull-left" style="background-image: url('img/z_hwls5.png')">流转9</button>
+                                 <button class="pull-left" style="background-image: url('img/z_hwls6.png')">建议9</button>
+                                 <button class="pull-left" style="background-image: url('img/z_hwls7.png')">反馈1</button>
+                                 <button class="pull-left" style="background-image: url('img/z_hwls8.png')">投诉1</button>
 
+                             </div>
+
+
+                             <div class="z_order">
+
+                                 <div class="z_order_titleBar">
+                                     <div class="z_order_action pull-left">呼入单据</div>
+                                     <div class="pull-left">上门服务</div>
+                                 </div>
+
+                                 <div class="z_order_content">
+
+                                     <div class="z_order_content_box">
+
+                                         <div class="z_content_box_leftPicXUN">询</div>
+
+                                         <div >
+                                             <span>咨询单编号:</span>
+                                             <span class="gayColor">&nbsp;&nbsp;2902902809810</span>
+                                             <span style="margin-left: 25px">分类:</span>
+                                             <span class="gayColor">&nbsp;&nbsp;维护-灶具</span>
+                                             <span style="margin-left: 25px">业务分类:</span>
+                                             <span class="gayColor">&nbsp;&nbsp;燃气-维护-灶具</span>
+                                             <span style="margin-left: 25px">创建时间:</span>
+                                             <span class="gayColor">&nbsp;&nbsp;2017-12-22 11:22</span>
+                                         </div>
+
+                                         <div style="margin-top: 18px">
+                                             <span>姓名:</span>
+                                             <span class="gayColor">&nbsp;&nbsp;张珊珊</span>
+                                             <span class="gayColor">&nbsp;(女士)</span>
+                                             <span style="margin-left: 80px">地址:</span>
+                                             <span class="gayColor">&nbsp;&nbsp;湖北省孝感市大悟县皇后东路12号银鹭小区2栋6单元109</span>
+                                         </div>
+
+                                         <div class="z_content_box_question">
+
+                                             <div class="gayColor">
+                                                 <span>咨询问题:</span>
+                                                 <span style="margin-left: 17px">灶具坏了,不通气了,怎么修?</span>
+                                             </div>
+                                             <div class="gayColor">
+                                                 <span>处理方法:</span>
+                                                 <span style="margin-left: 17px">以告知维修方法,以维修!</span>
+                                             </div>
+                                         </div>
+
+                                         <img src="img/z_zjt.png" alt="">
+
+                                     </div>
+
+                                     <div class="z_order_content_box">
+
+                                         <div class="z_content_box_leftPicBIAO">表</div>
+
+                                         <div >
+                                             <span>咨询单编号:</span>
+                                             <span class="gayColor">&nbsp;&nbsp;2902902809810</span>
+                                             <span style="margin-left: 25px">分类:</span>
+                                             <span class="gayColor">&nbsp;&nbsp;维护-灶具</span>
+                                             <span style="margin-left: 25px">业务分类:</span>
+                                             <span class="gayColor">&nbsp;&nbsp;燃气-维护-灶具</span>
+                                             <span style="margin-left: 25px">创建时间:</span>
+                                             <span class="gayColor">&nbsp;&nbsp;2017-12-22 11:22</span>
+                                         </div>
+
+                                         <div style="margin-top: 18px">
+                                             <span>姓名:</span>
+                                             <span class="gayColor">&nbsp;&nbsp;张珊珊</span>
+                                             <span class="gayColor">&nbsp;(女士)</span>
+                                             <span style="margin-left: 80px">地址:</span>
+                                             <span class="gayColor">&nbsp;&nbsp;湖北省孝感市大悟县皇后东路12号银鹭小区2栋6单元109</span>
+                                         </div>
+
+                                         <div class="z_content_box_question">
+
+                                             <div class="gayColor">
+                                                 <span>咨询问题:</span>
+                                                 <span style="margin-left: 17px">建议上门时间可以早点</span>
+                                             </div>
+                                         </div>
+
+                                         <img src="img/z_zjt.png" alt="">
+
+                                     </div>
+
+                                 </div>
+                             </div>
                          </div>
 
 
-                         <div class="z_order">
 
-                             <div class="z_order_titleBar">
-                                 <div class="z_order_action pull-left">呼入单据</div>
-                                 <div class="pull-left">上门服务</div>
-                             </div>
+
+
+                         <!--按客户ID-->
+                         <div class="khidDiv hidden">
+
+                             <p style="padding-left: 15px;background-color: #EAEBED;margin-top: 15px">上门服务订单(0)</p>
+
+                             <p style="font-size: 16px;padding-left: 15px;margin-top: 15px">咨询问题(2)</p>
 
                              <div class="z_order_content">
 
@@ -286,28 +379,18 @@
                                      <div class="z_content_box_leftPicXUN">询</div>
 
                                      <div >
-                                         <span>咨询单编号:</span>
+                                         <span>咨询单ID:</span>
                                          <span class="gayColor">&nbsp;&nbsp;2902902809810</span>
                                          <span style="margin-left: 25px">分类:</span>
                                          <span class="gayColor">&nbsp;&nbsp;维护-灶具</span>
-                                         <span style="margin-left: 25px">业务分类:</span>
-                                         <span class="gayColor">&nbsp;&nbsp;燃气-维护-灶具</span>
                                          <span style="margin-left: 25px">创建时间:</span>
                                          <span class="gayColor">&nbsp;&nbsp;2017-12-22 11:22</span>
-                                     </div>
-
-                                     <div style="margin-top: 18px">
-                                         <span>姓名:</span>
-                                         <span class="gayColor">&nbsp;&nbsp;张珊珊</span>
-                                         <span class="gayColor">&nbsp;(女士)</span>
-                                         <span style="margin-left: 80px">地址:</span>
-                                         <span class="gayColor">&nbsp;&nbsp;湖北省孝感市大悟县皇后东路12号银鹭小区2栋6单元109</span>
                                      </div>
 
                                      <div class="z_content_box_question">
 
                                          <div class="gayColor">
-                                             <span>咨询问题:</span>
+                                             <span>咨询详情:</span>
                                              <span style="margin-left: 17px">灶具坏了,不通气了,怎么修?</span>
                                          </div>
                                          <div class="gayColor">
@@ -317,37 +400,31 @@
                                      </div>
 
                                      <img src="img/z_zjt.png" alt="">
-                                     
+
                                  </div>
 
                                  <div class="z_order_content_box">
 
-                                     <div class="z_content_box_leftPicBIAO">表</div>
+                                     <div class="z_content_box_leftPicXUN">询</div>
 
                                      <div >
-                                         <span>咨询单编号:</span>
+                                         <span>咨询单ID:</span>
                                          <span class="gayColor">&nbsp;&nbsp;2902902809810</span>
                                          <span style="margin-left: 25px">分类:</span>
                                          <span class="gayColor">&nbsp;&nbsp;维护-灶具</span>
-                                         <span style="margin-left: 25px">业务分类:</span>
-                                         <span class="gayColor">&nbsp;&nbsp;燃气-维护-灶具</span>
                                          <span style="margin-left: 25px">创建时间:</span>
                                          <span class="gayColor">&nbsp;&nbsp;2017-12-22 11:22</span>
-                                     </div>
-
-                                     <div style="margin-top: 18px">
-                                         <span>姓名:</span>
-                                         <span class="gayColor">&nbsp;&nbsp;张珊珊</span>
-                                         <span class="gayColor">&nbsp;(女士)</span>
-                                         <span style="margin-left: 80px">地址:</span>
-                                         <span class="gayColor">&nbsp;&nbsp;湖北省孝感市大悟县皇后东路12号银鹭小区2栋6单元109</span>
                                      </div>
 
                                      <div class="z_content_box_question">
 
                                          <div class="gayColor">
-                                             <span>咨询问题:</span>
-                                             <span style="margin-left: 17px">建议上门时间可以早点</span>
+                                             <span>咨询详情:</span>
+                                             <span style="margin-left: 17px">灶具坏了,不通气了,怎么修?</span>
+                                         </div>
+                                         <div class="gayColor">
+                                             <span>处理方法:</span>
+                                             <span style="margin-left: 17px">以告知维修方法,以维修!</span>
                                          </div>
                                      </div>
 
@@ -356,7 +433,13 @@
                                  </div>
 
                              </div>
+
+                             <p style="padding-left: 15px;background-color: #EAEBED;margin-top: 15px">抢险(0)</p>
+
+                             <p style="padding-left: 15px;background-color: #EAEBED;margin-top: 15px">流转(0)</p>
                          </div>
+
+
 
 
                      </div>
@@ -628,6 +711,20 @@
 
                  $('.z_questionRedPic'+$('.z_action').index()+'').css('top',top+'px');
              })
+
+
+//             话务历史按钮点击
+             $('.hwlsBtn').on('click', function () {
+                 $('.khidDiv').addClass('hidden');
+                 $('.hwlsDiv').removeClass('hidden');
+             })
+//             客户id按钮点击
+             $('.khidBtn').on('click', function () {
+                 $('.hwlsDiv').addClass('hidden');
+                 $('.khidDiv').removeClass('hidden');
+             })
+
+
 
          });
 
