--- a/flow.html
+++ b/flow.html
@@ -21,13 +21,25 @@
          <form class="z_wb_search">
 
              <div class="pull-left">
-                 <span>电话</span>
-                 <input class="z_input" style="width: 130px;margin-left: 5px" type="text">
+                 <span class="pull-left">电话</span>
+                 <div class="clearfix z_layui_input pull-left">
+                     <div class="layui-form-item">
+                         <div class="layui-input-block" style="margin-left: 10px;margin-top: 6px">
+                             <input style="width: 130px;height: 28px;text-align: left" type="text" name="title" required  lay-verify="required" placeholder="电话" autocomplete="off" class="layui-input">
+                         </div>
+                     </div>
+                 </div>
              </div>
 
              <div class="pull-left" style="margin-left: 25px">
-                 <span>姓名</span>
-                 <input class="z_input" style="width: 97px;margin-left: 5px" type="text">
+                 <span class="pull-left">姓名</span>
+                 <div class="clearfix z_layui_input pull-left">
+                     <div class="layui-form-item">
+                         <div class="layui-input-block" style="margin-left: 10px;margin-top: 6px">
+                             <input style="width: 100px;height: 28px;text-align: left" type="text" name="title" required  lay-verify="required" placeholder="姓名" autocomplete="off" class="layui-input">
+                         </div>
+                     </div>
+                 </div>
              </div>
 
              <div class="pull-left" style="margin-left: 25px;position: relative">
@@ -55,15 +67,39 @@
              </div>
 
              <div class="pull-left" style="margin-left: 242px">
-                 <span>小区</span>
-                 <input class="z_address_input" type="text">
-                 <span>栋</span>
-                 <input class="z_address_input" type="text">
-                 <span>单元</span>
-                 <input class="z_address_input" type="text">
-                 <span>室</span>
-                 <span style="margin-left: 20px">合同号</span>
-                 <input class="z_address_input" style="width: 100px" type="text">
+                 <span class="pull-left">小区</span>
+                 <div class="clearfix z_layui_input pull-left">
+                     <div class="layui-form-item">
+                         <div class="layui-input-block" style="margin-left: 10px;margin-top: 6px">
+                             <input style="width: 45px;height: 28px;text-align: left" type="text" name="title" required  lay-verify="required" autocomplete="off" class="layui-input">
+                         </div>
+                     </div>
+                 </div>
+                 <span class="pull-left" style="margin-left: 7px">栋</span>
+                 <div class="clearfix z_layui_input pull-left">
+                     <div class="layui-form-item">
+                         <div class="layui-input-block" style="margin-left: 10px;margin-top: 6px">
+                             <input style="width: 45px;height: 28px;text-align: left" type="text" name="title" required  lay-verify="required" autocomplete="off" class="layui-input">
+                         </div>
+                     </div>
+                 </div>
+                 <span class="pull-left" style="margin-left: 7px">单元</span>
+                 <div class="clearfix z_layui_input pull-left">
+                     <div class="layui-form-item">
+                         <div class="layui-input-block" style="margin-left: 10px;margin-top: 6px">
+                             <input style="width: 45px;height: 28px;text-align: left" type="text" name="title" required  lay-verify="required" autocomplete="off" class="layui-input">
+                         </div>
+                     </div>
+                 </div>
+                 <span class="pull-left" style="margin-left: 7px">室</span>
+                 <span class="pull-left" style="margin-left: 20px">合同号</span>
+                 <div class="clearfix z_layui_input pull-left">
+                     <div class="layui-form-item">
+                         <div class="layui-input-block" style="margin-left: 10px;margin-top: 6px">
+                             <input style="width: 100px;height: 28px;text-align: left" type="text" name="title" required  lay-verify="required" autocomplete="off" class="layui-input">
+                         </div>
+                     </div>
+                 </div>
              </div>
 
              <div class="z_wb_searchBox"></div>
@@ -196,7 +232,6 @@
                      <div class="z_write_textE clearfix" style="height: 140px">
                          <div class="pull-left z_leftDiv">反馈内容:</div>
                          <!--<textarea class="pull-left" name="MSG" cols=40 rows=3 placeholder="请输入反馈内容!"></textarea>-->
-
                          <div >
                              <div class="layui-form-item layui-form-text">
                                  <div class="layui-input-block" style="margin-left: 80px">
@@ -213,7 +248,7 @@
 					  	 <span class="z_two_fang_span2">有供参考的关联单据（ 上门服务订单 <span style="color: #59caf4;">DD6876786878778</span>）</span>
 	                </div>
 	                <!--加急-->
-	                <div style="margin-left: 100px; " class="marginT15 clearfix z_ungent ">
+	                <div style="margin-left: 100px;  " class="marginT15 clearfix z_ungent ">
 					  	 <input style="float: left;" type="checkbox" name="like1[write]" title="加急处理" lay-skin="primary" >
 	                </div>
 	
